Add Chart and CDB/LCA formula

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<p-toolbar>
+    <div class="p-toolbar-group-left">
+      <span class="title">InvestFX</span>
+    </div>
+  </p-toolbar>
+  
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
