--- a/src/app/shared/panels/simulacao-grafico/simulacao-grafico.component.html
+++ b/src/app/shared/panels/simulacao-grafico/simulacao-grafico.component.html
@@ -1,1 +1,1 @@
-<p-chart type="bar" [data]="chartData" [options]="chartOptions"></p-chart>
+<p-chart type="bar" [data]="data" [options]="options" ></p-chart>
