add: Pagina contato

--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -1,1 +1,32 @@
-<p>contato works!</p>
+<div class="flex align-items-center gap-4 p-4" style="background: #fff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.07)">
+  <!-- Foto -->
+  <img
+    ngSrc="assets/Foto_perfil.jpg"
+    width="150"
+    height="150"
+    alt="Foto"
+    class="border-circle"
+    style="object-fit: cover;"
+  />
+
+
+  <!-- Informações -->
+  <div>
+    <h2>Victor Ximenes</h2>
+    <p>
+      Formado em Engenharia da Computação pela Universidade Federal de Pernambuco (UFPE).
+    </p>
+    <p>Trabalho como Engenheiro de Software Fullstack.</p>
+    <div class="flex gap-3 mt-2">
+      <a href="https://github.com/vxima" target="_blank" aria-label="GitHub">
+        <i class="pi pi-github" style="font-size: 2rem"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/victor-ximenes-carneiro-de-oliveira/" target="_blank" aria-label="LinkedIn">
+        <i class="pi pi-linkedin" style="font-size: 2rem"></i>
+      </a>
+      <a href="https://www.instagram.com/victorxima/" target="_blank" aria-label="Instagram">
+        <i class="pi pi-instagram" style="font-size: 2rem"></i>
+      </a>
+    </div>
+  </div>
+</div>
